# softfloat-pure

./: Cargo.toml  LICENSE-MIT  Makefile  README.md  testfloat-permute.py
.github/workflows/: rust-build-and-testfloat.yml
src/: fpu.rs  lib.rs
src/softfloat/: f32_add.rs  f32_classify.rs  f32_div.rs  f32_eq.rs  f32_eq_signaling.rs  f32_isSignalingNaN.rs  f32_le.rs  f32_le_quiet.rs  f32_lt.rs  f32_lt_quiet.rs  f32_mul.rs  f32_mulAdd.rs  f32_rem.rs  f32_roundToInt.rs  f32_sqrt.rs  f32_sub.rs  f32_to_f64.rs  f32_to_i32.rs  f32_to_i64.rs  f32_to_ui32.rs  f32_to_ui64.rs  f64_add.rs  f64_classify.rs  f64_div.rs  f64_eq.rs  f64_eq_signaling.rs  f64_isSignalingNaN.rs  f64_le.rs  f64_le_quiet.rs  f64_lt.rs  f64_lt_quiet.rs  f64_mul.rs  f64_mulAdd.rs  f64_rem.rs  f64_roundToInt.rs  f64_sqrt.rs  f64_sub.rs  f64_to_f32.rs  f64_to_i32.rs  f64_to_i64.rs  (+45 more)
src/softfloat/riscv/: mod.rs  s_commonNaNToF32UI.rs  s_commonNaNToF64UI.rs  s_f32UIToCommonNaN.rs  s_f64UIToCommonNaN.rs  s_propagateNaNF32UI.rs  s_propagateNaNF64UI.rs  specialize.rs
src/wrapper/: common.rs  f32.rs  f64.rs  mod.rs
testfloat/: .gitignore  Makefile
